# ted

./: Cargo.toml  README.md  test_text.txt
highlighting_test_files/: test_c.c  test_go.go  test_rust_source.rs
src/: editor.rs  frontend.rs  log.rs  main.rs
src/frontend/: app.rs  dialog.rs  keys.rs  language.rs  mod.rs  window.rs
src/frontend/keys/: command.rs  dialog.rs  insert.rs  mod.rs  normal.rs
src/keys/: command.rs  dialog.rs  insert.rs  mod.rs  normal.rs
